update vignette and plotting

--- a/vignettes/plotting-a-toy.Rmd
+++ b/vignettes/plotting-a-toy.Rmd
@@ -27,17 +27,17 @@ task <- toy_tasks %>% filter(trajectory_type == "bifurcation") %>% extract_row_t
 ## Plotting the topology and cellular positions
 
 If the topology is very simple (or should be represented in one dimension)
-```{r}
+```{r onedim}
 plot_onedim(task)
 ```
 
 If the topology is a tree
-```{r}
+```{r dendro}
 plot_dendro(task)
 ```
 
 If the topology is more complex
-```{r}
+```{r graph}
 plot_graph(task)
 
 ```
@@ -47,7 +47,7 @@ plot_graph(task)
 grouping_assignment <- task$prior_information$grouping_assignment
 ```
 
-```{r}
+```{r grouping}
 plot_onedim(task, grouping_assignment=grouping_assignment)
 plot_dendro(task, grouping_assignment=grouping_assignment)
 plot_graph(task, grouping_assignment=grouping_assignment)
@@ -58,7 +58,7 @@ plot_graph(task, grouping_assignment=grouping_assignment)
 gene_oi <- first(colnames(task$counts))
 ```
 
-```{r}
+```{r expression}
 plot_onedim(task, gene_oi = gene_oi)
 plot_dendro(task, gene_oi = gene_oi)
 plot_graph(task, gene_oi = gene_oi)
@@ -66,21 +66,21 @@ plot_graph(task, gene_oi = gene_oi)
 
 ## Plotting expression of a lot of genes
 
-```{r}
+```{r heatmap}
 plot_heatmap(task)
 ```
-```{r}
-plot_genes(task)
+```{r line}
+# plot_genes(task)
 ```
 
 
 
 ## Comparing trajectories
 ```{r}
-pseudotime <- task$counts %>% prcomp() %>% {.$x[, 1]}
-prediction <- dynwrap::wrap_data("dummy_prediction", task$cell_ids) %>% 
-  dynwrap::add_linear_trajectory_to_wrapper(pseudotime)
-
-plot_strip_onedim(task, prediction)
+# pseudotime <- task$counts %>% prcomp() %>% {.$x[, 1]}
+# prediction <- dynwrap::wrap_data("dummy_prediction", task$cell_ids) %>% 
+#   dynwrap::add_linear_trajectory_to_wrapper(pseudotime)
+# 
+# plot_strip_onedim(task, prediction)
 ```
 
