fix plot_topology, that's why you have testing

--- a/vignettes/plotting-a-toy.Rmd
+++ b/vignettes/plotting-a-toy.Rmd
@@ -21,7 +21,7 @@ library(dynwrap)
 
 Load in a toy dataset
 ```{r}
-task <- toy_tasks %>% filter(trajectory_type == "bifurcation") %>% extract_row_to_list(1)
+task <- toy_tasks %>% filter(trajectory_type == "bifurcation") %>% extract_row_to_list(1) %>% root_trajectory()
 ```
 
 ## Plotting the topology and cellular positions
@@ -41,6 +41,11 @@ If the topology is more complex
 plot_graph(task)
 
 ```
+
+```{r}
+plot_topology(task)
+```
+
 
 ## Plotting a grouping
 ```{r}
@@ -77,10 +82,10 @@ plot_heatmap(task)
 
 ## Comparing trajectories
 ```{r}
-# pseudotime <- task$counts %>% prcomp() %>% {.$x[, 1]}
-# prediction <- dynwrap::wrap_data("dummy_prediction", task$cell_ids) %>% 
-#   dynwrap::add_linear_trajectory_to_wrapper(pseudotime)
-# 
-# plot_strip_onedim(task, prediction)
+pseudotime <- task$counts %>% prcomp() %>% {.$x[, 1]}
+prediction <- dynwrap::wrap_data("dummy_prediction", task$cell_ids) %>%
+  dynwrap::add_linear_trajectory_to_wrapper(pseudotime)
+
+plot_strip_onedim(task, prediction)
 ```
 
