--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(fig.path=".readme_files/", warning=FALSE, message=FALSE, e
 
 The package provides different ways to plot both the topology and cellular properties of a trajectory:
 
-```{r, fig.width=15, fig.height=6, echo=FALSE}
+```{r}
 library(dplyr)
 library(dyntoy)
 library(dynplot)
@@ -33,7 +33,10 @@ grouping_assignment <- task$prior_information$grouping_assignment
 groups <- tibble(group_id = unique(grouping_assignment$group_id)) %>% mutate(color=dynplot:::milestone_palette_list$auto(n()))
 features_oi <- apply(task$counts, 2, sd) %>% sort() %>% names() %>% tail(10)
 feature_oi <- features_oi[[1]]
+```
 
+
+```{r cells, fig.width=15, fig.height=10, echo=FALSE}
 empty <- ggplot() + theme_void()
 question <- empty + geom_text(aes(0, 0, label="????"))
 unavailable <- empty + geom_text(aes(0, 0, label="----"))
@@ -94,7 +97,7 @@ wrap_plots(
 
 And to plot the expression and feature importances of many genes along the trajectory
 
-```{r, echo=FALSE, fig.width=10, fig.height=6}
+```{r heatmap, echo=FALSE, fig.width=10, fig.height=6}
 cell_feature_importance <- dynfeature::calculate_cell_feature_importance(task %>% dynwrap::add_waypoints_to_wrapper())
 plot_heatmap(task, cell_feature_importance=cell_feature_importance, grouping_assignment = task$prior_information$grouping_assignment)
 ```
