--- a/vignettes/plotting-a-toy.Rmd
+++ b/vignettes/plotting-a-toy.Rmd
@@ -91,6 +91,6 @@ pseudotime <- traj$counts %>% prcomp() %>% {.$x[, 1]}
 prediction <- dynwrap::wrap_data("dummy_prediction", traj$cell_ids) %>%
   dynwrap::add_linear_trajectory_to_wrapper(pseudotime)
 
-plot_strip_onedim(traj, prediction)
+plot_linearised_comparison(traj, prediction)
 ```
 
