--- a/vignettes/plotting-a-toy.Rmd
+++ b/vignettes/plotting-a-toy.Rmd
@@ -21,7 +21,7 @@ library(dynwrap)
 
 Load in a toy dataset
 ```{r}
-traj <- toy_tasks %>% filter(trajectory_type == "bifurcation") %>% extract_row_to_list(1) %>% root_trajectory()
+traj <- toy_tasks %>% filter(trajectory_type == "bifurcation") %>% extract_row_to_list(1) %>% add_root()
 ```
 
 ## Plotting the topology and cellular positions
