--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(fig.path=".readme_files/", warning=FALSE, message=FALSE, e
 
 The package provides different ways to plot both the topology and cellular properties of a trajectory:
 
-```{r}
+```{r, echo=FALSE}
 library(dplyr)
 library(dyntoy)
 library(dynplot)
@@ -28,7 +28,7 @@ library(tidyverse)
 library(patchwork)
 
 traj <- toy_tasks %>% filter(id == "toy/consecutive_bifurcating_1") %>% extract_row_to_list(1)
-traj <- traj %>% root_trajectory()
+traj <- traj %>% add_root()
 grouping_assignment <- traj$prior_information$grouping_assignment
 groups <- tibble(group_id = unique(grouping_assignment$group_id)) %>% mutate(color=dynplot:::milestone_palette_list$auto(n()))
 features_oi <- apply(traj$counts, 2, sd) %>% sort() %>% names() %>% tail(10)
@@ -102,6 +102,6 @@ cell_feature_importance <- dynfeature::calculate_cell_feature_importance(traj %>
 plot_heatmap(traj, cell_feature_importance=cell_feature_importance, grouping_assignment = traj$prior_information$grouping_assignment)
 ```
 
-```{r heatmap, echo=FALSE, fig.width=10, fig.height=6}
+```{r features, echo=FALSE, fig.width=10, fig.height=6, include=FALSE}
 plot_features(traj, features_oi = 5)
 ```
