--- a/vignettes/plotting-a-toy.Rmd
+++ b/vignettes/plotting-a-toy.Rmd
@@ -6,7 +6,7 @@ output:
     fig_width: 5
     fig_height: 4 
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{generate_file_from_container(x)}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
@@ -61,7 +61,7 @@ grouping <- traj$prior_information$groups_id
 ```{r grouping}
 plot_onedim(traj, grouping = grouping)
 plot_dendro(traj, grouping = grouping)
-# plot_graph(traj, grouping = grouping) # TODO: fix
+plot_graph(traj, grouping = grouping)
 plot_dimred(traj, grouping = grouping)
 ```
 
@@ -73,7 +73,7 @@ feature_oi <- first(colnames(traj$counts))
 ```{r expression}
 plot_onedim(traj, feature_oi = feature_oi)
 plot_dendro(traj, feature_oi = feature_oi)
-# plot_graph(traj, feature_oi = feature_oi) # TODO: fix?!
+plot_graph(traj, feature_oi = feature_oi)
 plot_dimred(traj, feature_oi = feature_oi)
 ```
 
