remove dyntoy dependency

--- a/README.Rmd
+++ b/README.Rmd
@@ -30,7 +30,6 @@ The package provides different ways to plot both the topology and cellular prope
 
 ```{r, echo=FALSE}
 library(dplyr)
-library(dyntoy)
 library(dynplot)
 library(dynutils)
 library(dynwrap)
@@ -38,7 +37,9 @@ library(tidyverse)
 
 library(patchwork)
 
-traj <- toy_datasets %>% filter(id == "toy/bifurcating_1") %>% extract_row_to_list(1)
+data(example_bifurcating)
+traj <- example_bifurcating
+
 traj <- traj %>% add_root()
 grouping <- traj$prior_information$groups_id
 groups <- tibble(group_id = unique(grouping$group_id)) %>% 
