--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,4 +1,4 @@
-# dynplot 1.0.0 (unreleased)
+dynplot 1.0.0 (unreleased)
 
  * Initial release of dynplot
  * Plotting of trajectories & visual comparisons between trajectories
