--- a/README.Rmd
+++ b/README.Rmd
@@ -8,8 +8,8 @@ output: github_document
 knitr::opts_chunk$set(fig.path=".readme_files/", warning=FALSE, message=FALSE, error=FALSE, echo = TRUE)
 ```
 
-[![Build Status](https://travis-ci.org/dynverse/dynplot.svg)](https://travis-ci.org/dynverse/dynplot)
-[![codecov](https://codecov.io/gh/dynverse/dynplot/branch/master/graph/badge.svg)](https://codecov.io/gh/dynverse/dynplot)  <img src="man/img/logo.png" align="right" />
+<a href="https://travis-ci.org/dynverse/dynplot"><img src="https://travis-ci.org/dynverse/dynplot.svg" align="left"></a>
+<a href="https://codecov.io/gh/dynverse/dynplot"><img src="https://codecov.io/gh/dynverse/dynplot/branch/master/graph/badge.svg" align="left"></a> <br><img src="man/figures/logo.png" align="right" />
 
 # Common visualisation tools for single-cell trajectories
 
@@ -121,6 +121,6 @@ Check out `news(package = "dynplot")` or [NEWS.md](inst/NEWS.md) for a full list
 <!-- This section gets automatically generated from inst/NEWS.md, and also generates inst/NEWS -->
 
 ```{r news, echo=FALSE, results="asis"}
-if (file.exists("DESCRIPTION")) dynutils::update_news()
+dynutils::update_news()
 cat(dynutils::recent_news())
 ```
