--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,4 +1,5 @@
-dynplot 1.0.0 (unreleased)
+dynplot 1.0.0 (28-03-2019)
 
  * Initial release of dynplot
- * Plotting of trajectories & visual comparisons between trajectories
+ * Plotting of trajectories
+ * Compatible with all methods of dynmethods
