--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,7 @@
+dynplot 1.0.1 (07-05-2019)
+
+ * Remove shades dependency, fixing rgb2hsv bug
+
 dynplot 1.0.0 (28-03-2019)
 
  * Initial release of dynplot
