--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "dynplot: Common visualisation tools for single-cell trajectories"
+title: "dynplot: Plotting Single-Cell Trajectories"
 output:
   github_document:
     html_preview: false
@@ -18,6 +18,7 @@ knitr::opts_chunk$set(
   message = FALSE,
   dpi = 300
 )
+set.seed(1)
 ```
 
 <a href="https://github.com/dynverse/dynplot/actions?query=workflow%3AR-CMD-check"><img src="https://github.com/dynverse/dynplot/workflows/R-CMD-check/badge.svg" align="left"></a> 
@@ -26,7 +27,9 @@ knitr::opts_chunk$set(
 [**ℹ️ Reference documentation**](https://dynverse.org/reference/dynplot) <br><img src="man/figures/logo.png" align="right" />
 
 
-The package provides different ways of plotting the topology and/or cellular properties of a trajectory.
+The package provides different ways of visualising single-cell trajectories. This can be
+the trajectory topology itself, projected onto a dimensionality reduction,
+using a heatmap, or a comparison between two trajectories.
 
 Here's a summary of the provided plotting functions.
 
@@ -101,9 +104,6 @@ dimred <- list(
 
 wrap_plots(
   c(title, dendro, onedim, graph, dimred),
-  # heights = c(1, 3, 3, 3, 3, 3),
-  # ncol = 5,
-  # byrow = FALSE
   widths = c(1, 3, 3, 3, 3, 3),
   nrow = 5,
   byrow = TRUE
@@ -117,7 +117,7 @@ plot_heatmap(trajectory, grouping = trajectory$prior_information$grouping_assign
 ```
 
 Or create a comparison plot between two trajectories for the same cells.
-```{r scatterplot, echo=FALSE, fig.width=6, fig.height=6}
+```{r scatterplot, echo=FALSE, fig.width=8, fig.height=8}
 plot_linearised_comparison(trajectory, trajectory)
 ```
 
