--- a/README.Rmd
+++ b/README.Rmd
@@ -27,100 +27,135 @@ set.seed(1)
 [**ℹ️ Reference documentation**](https://dynverse.org/reference/dynplot) <br><img src="man/figures/logo.png" align="right" />
 
 
-The package provides different ways of visualising single-cell trajectories. This can be
-the trajectory topology itself, projected onto a dimensionality reduction,
-using a heatmap, or a comparison between two trajectories.
+Visualise a single-cell trajectory as a graph or dendrogram, 
+as a dimensionality reduction or heatmap of the expression data, 
+or a comparison between two trajectories as a pairwise scatterplot
+or dimensionality reduction projection.
 
-Here's a summary of the provided plotting functions.
 
+Here's a summary of the different plotting functions for visualising single-cell trajectories.
 
-```{r, echo=FALSE, warning=FALSE}
+```{r setup, warning=FALSE}
 library(tidyverse)
 library(dyno)
 
-library(patchwork)
-
+# get trajectory
 data(example_bifurcating)
-trajectory <- example_bifurcating
 
-trajectory <- trajectory %>% add_root()
+trajectory <- example_bifurcating %>% add_root()
+
+# gather some prior information
 grouping <- trajectory$prior_information$groups_id
-groups <- tibble(dynwrap::group_onto_nearest_milestones(trajectory)) %>% 
-  mutate(color=dynplot:::milestone_palette_list$auto(n()))
+
+groups <- tibble(
+  group_id = trajectory$milestone_ids,
+  color = dynplot:::milestone_palette_list$auto(length(group_id))
+)
 features_oi <- apply(as.matrix(trajectory$counts), 2, sd) %>% sort() %>% names() %>% tail(10)
 feature_oi <- features_oi[[10]]
 ```
 
+## `plot_dendro()`: Plot a trajectory as a dendrogram
 
-```{r cells, fig.width=18, fig.height=12, echo=FALSE, warning=FALSE}
-empty <- ggplot() + theme_void()
-question <- empty + geom_text(aes(0, 0, label="????"))
-unavailable <- empty + geom_text(aes(0, 0, label="----"))
-
-title <- list(
-  dynplot:::empty_plot(),
-  empty + geom_label(aes(0, 0, label="Topology")),
-  empty + geom_label(aes(0, 0, label="Ordering")),
-  empty + geom_label(aes(0, 0, label="Grouping/clustering")),
-  empty + geom_label(aes(0, 0, label="Expression of \n a single gene")), 
-  empty + geom_label(aes(0, 0, label="Pseudotime"))
-)
-
-dendro <- list(
-  empty + geom_label(aes(0, 0, label="plot_dendro()")),
-  plot_dendro(trajectory),
-  plot_dendro(trajectory, "milestone"),
-  plot_dendro(trajectory, grouping=grouping, groups=groups),
-  plot_dendro(trajectory, feature_oi=feature_oi),
-  plot_dendro(trajectory, "pseudotime")
-)
-
-onedim <- list(
-    empty + geom_label(aes(0, 0, label="plot_onedim()")),
-    plot_onedim(trajectory),
-    plot_onedim(trajectory, "milestone"),
-    plot_onedim(trajectory, grouping=grouping, groups=groups),
-    plot_onedim(trajectory, feature_oi=feature_oi),
-    plot_onedim(trajectory, "pseudotime")
-  )
-
-graph <- list(
-  empty + geom_label(aes(0, 0, label="plot_graph()")),
-  plot_graph(trajectory),
-  plot_graph(trajectory, "milestone"),
-  plot_graph(trajectory, grouping=grouping, groups=groups),
-  plot_graph(trajectory, feature_oi=feature_oi),
-  plot_graph(trajectory, "pseudotime")
-)
-
-dimred <- list(
-  empty + geom_label(aes(0, 0, label="plot_dimred()")),
-  plot_dimred(trajectory),
-  plot_dimred(trajectory, "milestone"),
-  plot_dimred(trajectory, grouping=grouping, groups=groups),
-  plot_dimred(trajectory, feature_oi=feature_oi),
-  plot_dimred(trajectory, "pseudotime")
-)
-
-wrap_plots(
-  c(title, dendro, onedim, graph, dimred),
-  widths = c(1, 3, 3, 3, 3, 3),
-  nrow = 5,
-  byrow = TRUE
+```{r dendro, fig.width=8, fig.height=6}
+patchwork::wrap_plots(
+  plot_dendro(trajectory) + labs(title = "Topology"),
+  plot_dendro(trajectory, "milestone") + labs(title = "Ordering"),
+  plot_dendro(trajectory, grouping=grouping, groups=groups) + labs(title = "Grouping/clustering"),
+  plot_dendro(trajectory, feature_oi=feature_oi) + labs(title = "Expression of\na single gene"),
+  plot_dendro(trajectory, "pseudotime") + labs(title = "Pseudotime"),
+  byrow = TRUE,
+  ncol = 3
 ) & theme(legend.position = "none")
 ```
 
+## `plot_onedim()`: Plot a trajectory as a one-dimensional set of connected segments
+
+```{r onedim, fig.width=8, fig.height=8}
+patchwork::wrap_plots(
+  plot_onedim(trajectory) + labs(title = "Topology"),
+  plot_onedim(trajectory, "milestone") + labs(title = "Ordering"),
+  plot_onedim(trajectory, grouping=grouping, groups=groups) + labs(title = "Grouping/clustering"),
+  plot_onedim(trajectory, feature_oi=feature_oi) + labs(title = "Expression of\na single gene"),
+  plot_onedim(trajectory, "pseudotime") + labs(title = "Pseudotime"),
+  byrow = TRUE,
+  ncol = 2
+) & theme(legend.position = "none")
+```
+
+## `plot_graph()`: Plot a trajectory and cellular positions as a graph
+
+```{r graph, fig.width=8, fig.height=5}
+patchwork::wrap_plots(
+  plot_graph(trajectory) + labs(title = "Topology"),
+  plot_graph(trajectory, "milestone") + labs(title = "Ordering"),
+  plot_graph(trajectory, grouping=grouping, groups=groups) + labs(title = "Grouping/clustering"),
+  plot_graph(trajectory, feature_oi=feature_oi) + labs(title = "Expression of\na single gene"),
+  plot_graph(trajectory, "pseudotime") + labs(title = "Pseudotime"),
+  byrow = TRUE,
+  ncol = 3
+) & theme(legend.position = "none")
+```
+
+
+## `plot_dimred()`: Plot a trajectory in a (given) dimensionality reduction
+
+```{r dimred, fig.width=8, fig.height=5}
+patchwork::wrap_plots(
+  plot_dimred(trajectory) + labs(title = "Topology"),
+  plot_dimred(trajectory, "milestone") + labs(title = "Ordering"),
+  plot_dimred(trajectory, grouping=grouping, groups=groups) + labs(title = "Grouping/clustering"),
+  plot_dimred(trajectory, feature_oi=feature_oi) + labs(title = "Expression of\na single gene"),
+  plot_dimred(trajectory, "pseudotime") + labs(title = "Pseudotime"),
+  byrow = TRUE,
+  ncol = 3
+) & theme(legend.position = "none")
+```
+
+## `plot_heatmap()`: Plot expression data along a trajectory
+
 In addition, you can also plot the expression of genes along the trajectory as a heatmap.
 
-```{r heatmap, echo=FALSE, fig.width=10, fig.height=6}
+```{r heatmap, fig.width=10, fig.height=6}
 plot_heatmap(trajectory, grouping = trajectory$prior_information$grouping_assignment)
 ```
 
-Or create a comparison plot between two trajectories for the same cells.
-```{r scatterplot, echo=FALSE, fig.width=8, fig.height=8}
-plot_linearised_comparison(trajectory, trajectory)
+## `plot_linearised_comparison()`: Compare two trajectories as a pseudotime scatterplot
+
+You can compare multiple trajectories (for the same cells) by creating a
+scatterplot between the two trajectories.
+
+```{r scatterplot, fig.width=8, fig.height=4}
+prediction <- infer_trajectory(trajectory, ti_comp1())
+
+trajectory$id <- "Bifurcating"
+prediction$id <- "Linear"
+plot_linearised_comparison(trajectory, prediction)
 ```
 
+<!--
+
+TODO: create dedicated function for this
+## Alternative: Compare two trajectories by projecting dimensionality reductions
+
+You can also use the colouring of the cells in order to compare two trajectories.
+
+{r dimredcompare}
+traj1 <- trajectory %>% dynwrap::add_dimred(dimred = dyndimred::dimred_landmark_mds)
+traj2 <- prediction %>% dynwrap::add_dimred(dimred = dyndimred::dimred_landmark_mds, expression_source = trajectory)
+
+plot_dimred(traj1, milestone_percentages = traj2$milestone_percentages, milestones = traj2$milestone_ids)
+plot_dimred(
+  traj2,
+  expression_source = traj1,
+  color_cells = "milestone",
+  milestones = traj1$milestone_ids,
+  milestone_percentages = traj1$milestone_percentages
+)
+
+
+
+-->
 
 ## Latest changes
 
